compiler/testData/diagnostics/tests/regressions/kt10243.kt
konst f: Boolean = true
private fun doUpdateRegularTasks() {
    try {
        while (f) {
            konst xmlText = <!UNRESOLVED_REFERENCE!>getText<!>()
            if (<!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>xmlText<!> <!DEBUG_INFO_MISSING_UNRESOLVED!>==<!> null) {}
            else {
                <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>xmlText<!>.<!DEBUG_INFO_MISSING_UNRESOLVED, VARIABLE_EXPECTED!>konstue<!> = 0 // !!!
            }
        }

    }
    finally {
        fun execute() {}
    }
}
